fix: Ported normalize style to li, aligning filter resource buttons

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -25,6 +25,7 @@ h3,
 .h3 {
 	font-size: rem(18);
 	font-weight: $font-weight-bold;
+	margin: 1em 0;
 }
 
 h4 {
@@ -47,6 +48,10 @@ a:focus {
 
 a:focus {
 	outline: none;
+}
+
+li {
+	list-style: none;
 }
 
 p {
