--- a/src/scss/components/_resources.scss
+++ b/src/scss/components/_resources.scss
@@ -83,8 +83,10 @@
 			margin-top: rem(24);
 
 			button {
+				align-items: center;
 				background-color: $white;
 				box-shadow: 0 0 rem(7) $border-shadow-colour;
+				display: flex;
 			}
 		}
 
